objects/Promo_Campaign__c.object
<CustomObject>
    <fields>
        <fullName>Auto_Register_Loyalty_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto-Register Loyalty Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Availability_DateTime__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Availability DateTime</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>Promo_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Brand</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Promo Campaigns</relationshipLabel>
        <relationshipName>Promo_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category_Flag2__c</fullName>
        <formula>RecordType.Name = &apos;Category&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Flag2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Category Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Coupon__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Coupon</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.Family</field>
                <operation>equals</operation>
                <value>Coupon</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Promo Campaigns</relationshipLabel>
        <relationshipName>Promo_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_Outlet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Outlet</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Outlet</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Promo Campaigns (Default Outlet)</relationshipLabel>
        <relationshipName>Promo_Campaigns1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <label>Discount Fixed Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_Calc__c</fullName>
        <formula>IF( 
Discount__c &gt;0, TEXT(Discount__c*100) &amp; &apos;%&apos;,&apos;&apos;)
&amp;
IF(Discount_Amount__c &gt;0,  IF(Discount__c &gt;0, &apos;, &apos;,&apos;&apos;) &amp; TEXT(Discount_Amount__c) &amp; &apos; &apos; &amp;Reedem_Unit_of_Measure__c,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Calc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Discount %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Image2__c</fullName>
        <formula>IMAGE(Image__c,&apos;Image&apos;,150,150)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_2__c</fullName>
        <formula>IMAGE( Image__c ,&apos;Logo&apos;,100,100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <label>Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Loy_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loyalty Program</label>
        <referenceTo>CVL__Loy_Program__c</referenceTo>
        <relationshipLabel>Promo Campaigns</relationshipLabel>
        <relationshipName>Promo_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <formula>IF(
Discount_Calc__c &lt;&gt;&apos;&apos;, 
	$Label.Get &amp; 
	&apos; &apos; &amp; 
	Discount_Calc__c &amp; 
	&apos; &apos;&amp; 
	$Label.of_discount &amp;
	IF(Reedem_Amount__c&gt;0,
		&apos; &apos;&amp; 
		$Label.for &amp;
		&apos; &apos; &amp; 
		TEXT(Reedem_Amount__c) &amp;
		&apos; &apos;&amp; 
		Reedem_Unit_of_Measure__c
	,&apos;&apos;)
,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minimum_Purchase_Amount__c</fullName>
        <label>Minimum Purchase Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_Of_Coupons_per_Transaction__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Number Of Coupons per Transaction</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Coupons_per_Member__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Number of Coupons per Member</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Promo_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Promo Campaign</label>
        <referenceTo>Promo_Campaign__c</referenceTo>
        <relationshipLabel>Promo Campaigns</relationshipLabel>
        <relationshipName>Child_Promo_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Promo_message__c</fullName>
        <label>Promo message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reedem_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Reedem Points Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reedem_Rate__c</fullName>
        <label>Reedem Points Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reedem_Unit_of_Measure__c</fullName>
        <formula>TEXT(CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reedem Unit of Measure</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terms_And_Conditions__c</fullName>
        <label>Terms And Conditions</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Terms_and_conditions2__c</fullName>
        <label>Terms and conditions</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Total_Coupon_Inventory__c</fullName>
        <label>Total Coupon Inventory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>flow_reedem__c</fullName>
        <label>flow_reedem</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>Promo Campaign</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promo Campaigns</pluralLabel>
    <recordTypes>
        <fullName>Category</fullName>
        <active>true</active>
        <label>Category</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pounch_Card</fullName>
        <active>true</active>
        <label>Pounch Card</label>
    </recordTypes>
    <recordTypes>
        <fullName>Voucher</fullName>
        <active>true</active>
        <label>Voucher</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>